# nimble-steps-serialize-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
docs/: index.md
src/: CMakeLists.txt
src/examples/: main.c
src/include/nimble-steps-serialize/: in_serialize.h  out_serialize.h  pending_in_serialize.h  pending_out_serialize.h  serialize.h  types.h
src/lib/: CMakeLists.txt  in_serialize.c  out_serialize.c  pending_in_serialize.c  pending_out_serialize.c  types.c
