cmake_minimum_required(VERSION 3.17)
project(nimble_steps_serialize C)

add_subdirectory("deps/piot/nimble-steps-c/src/lib")
add_subdirectory("deps/piot/clog/src/lib")
add_subdirectory("deps/piot/tiny-libc/src/lib")
add_subdirectory("deps/piot/imprint/src/lib")
add_subdirectory("deps/piot/discoid-c/src/lib")
add_subdirectory("deps/piot/flood-c/src/lib")
add_subdirectory("lib")